# apps/system/api/domain/me/me.go
@@ -2,17 +2,17 @@ package me
 
 import (
 	"github.com/ryo034/react-go-template/apps/system/api/domain/me/multi_factor"
-	"github.com/ryo034/react-go-template/apps/system/api/domain/membership"
+	"github.com/ryo034/react-go-template/apps/system/api/domain/workspace/member"
 )
 
 type Me struct {
 	emailVerified bool
 	multiFactors  multi_factor.MultiFactors
-	membership    *membership.Membership
+	member        *member.Member
 }
 
-func NewMe(emailVerified bool, multiFactors multi_factor.MultiFactors, membership *membership.Membership) *Me {
-	return &Me{emailVerified, multiFactors, membership}
+func NewMe(emailVerified bool, multiFactors multi_factor.MultiFactors, member *member.Member) *Me {
+	return &Me{emailVerified, multiFactors, member}
 }
 
 func (m *Me) EmailVerified() bool {
@@ -27,6 +27,6 @@ func (m *Me) MultiFactors() multi_factor.MultiFactors {
 	return m.multiFactors
 }
 
-func (m *Me) Membership() *membership.Membership {
-	return m.membership
+func (m *Me) Member() *member.Member {
+	return m.member
 }
