# apps/system/api/infrastructure/database/bun/models/member.go
@@ -10,10 +10,11 @@ type Member struct {
 	bun.BaseModel `bun:"table:members,alias:m"`
 
 	MemberID        uuid.UUID `bun:"member_id,pk"`
+	WorkspaceID     uuid.UUID `bun:"workspace_id,notnull"`
 	SystemAccountID uuid.UUID `bun:"system_account_id,notnull"`
 	CreatedAt       time.Time `bun:"created_at,notnull,default:current_timestamp"`
 
 	SystemAccount *SystemAccount `bun:"rel:belongs-to"`
 	Profile       *MemberProfile `bun:"rel:has-one"`
-	Memberships   []*Membership  `bun:"rel:has-many"`
+	Workspace     *Workspace     `bun:"rel:belongs-to"`
 }
