# apps/system/api/infrastructure/database/bun/models/workspace.go
@@ -12,6 +12,6 @@ type Workspace struct {
 	WorkspaceID uuid.UUID `bun:"workspace_id,pk"`
 	CreatedAt   time.Time `bun:"created_at,notnull,default:current_timestamp"`
 
-	Detail      *WorkspaceDetail `bun:"rel:has-one"`
-	Memberships []*Membership    `bun:"rel:has-many"`
+	Detail  *WorkspaceDetail `bun:"rel:has-one"`
+	Members []*Member        `bun:"rel:has-many"`
 }
